<resources>
    <string name="app_name">Kasir VIP</string>
    <string name="default_notification_channel_id">default</string>
    <string name="freshchat_file_provider_authority">id.kasirvippro.android.provider</string>
    <string name="banner_ad_unit_id">ca-app-pub-1475172704743990/6035764422</string>
    <string name="default_lang">in</string>
    <string name="id_lang">in</string>
    <string name="id_country">ID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="currency_discount" translatable="false">Rp</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_sell">Penjualan</string>
    <string name="menu_history">Histori Transaksi</string>
    <string name="menu_report">Laporan</string>
    <string name="menu_management">Manajemen</string>
    <string name="menu_setting">Pengaturan</string>
    <string name="menu_help">Bantuan</string>
    <string name="menu_category">Kategori Produk</string>
    <string name="menu_add_category">Tambah Kategori</string>
    <string name="menu_edit_category">Edit Kategori</string>
    <string name="menu_add_supplier">Tambah Supplier</string>
    <string name="menu_edit_supplier">Edit Supplier</string>
    <string name="menu_add_customer">Tambah Pelanggan</string>
    <string name="menu_edit_customer">Edit Pelanggan</string>
    <string name="menu_add_product">Tambah Produk</string>
    <string name="menu_edit_product">Edit Produk</string>
    <string name="menu_scan_barcode">Scan Barcode</string>
    <string name="menu_detail_transaction">Detail Transaksi</string>
    <string name="menu_hutang_piutang">Kelola Hutang</string>
    <string name="menu_hutang_supplier">Daftar Hutang</string>
    <string name="menu_piutang_customer">Daftar Piutang</string>
    <string name="menu_piutang_customer_all">Piutang Terakhir</string>
    <string name="menu_hutang_supplier_all">Hutang Terakhir</string>
    <string name="menu_choose_product">Pilih Produk</string>
    <string name="menu_sell_manual">Penjualan</string>
    <string name="menu_choose_customer">Pilih Pelanggan</string>
    <string name="menu_choose_supplier">Pilih Supplier</string>
    <string name="reason_permission_read_phone_state">Anda harus memberikan izin untuk mengakses IMEI dari perangkat Anda</string>
    <string name="reason_permission_location">Izinkan untuk mendapatkan lokasi dari perangkat Anda</string>
    <string name="reason_permission_camera">Anda harus memberikan izin sebelum dapat menggunakan kamera dan penyimpanan</string>
    <string name="reason_permission_bluetooth">Izinkan untuk mengakses bluetooth dari perangkat Anda</string>
    <string name="reason_permission_write_external">Izinkan untuk menyimpan gambar ke perangkat Anda</string>
    <string name="lbl_tagline_1">Kelola bisnis Anda lebih Mudah!</string>
    <string name="lbl_tagline_2">Silahkan masuk dan kelola kebutuan toko Anda!</string>
    <string name="lbl_welcome">Selamat Datang!</string>
    <string name="lbl_tagline_3">Daftarkan warung Anda dan nikmati kemudahannya.</string>
    <string name="lbl_tagline_4">Kelola toko Anda</string>
    <string name="lbl_title_manage">Cek sesuaikan data produk, kategori produk,\ndata pelanggan, data supplier dan hutang piutang\nToko Anda</string>
    <string name="lbl_manage_produk_title">Produk dan Layanan</string>
    <string name="lbl_manage_produk_info">Atur Produk Toko Anda!</string>
    <string name="lbl_manage_kategori_title">Kategori Produk</string>
    <string name="lbl_manage_kategori_info">Atur Kategori Produk Toko Anda!</string>
    <string name="lbl_manage_discount_title">Diskon</string>
    <string name="lbl_manage_discount_info">Atur Diskon Toko Anda!</string>
    <string name="lbl_manage_supplier_title">Supplier</string>
    <string name="lbl_manage_supplier_info">Cek Data Supplier Toko Anda!</string>
    <string name="lbl_manage_pelanggan_title">Pelanggan</string>
    <string name="lbl_manage_pelanggan_info">Kelola Pelanggan Toko Anda!</string>
    <string name="lbl_manage_staff_title">Karyawan</string>
    <string name="lbl_manage_staff_info">Kelola Karyawan Toko Anda!</string>
    <string name="lbl_manage_store_title">Toko dan Cabang</string>
    <string name="lbl_manage_store_info">Kelola Toko dan Cabang Anda!</string>
    <string name="lbl_manage_bank_title">Kelola Bank</string>
    <string name="lbl_manage_bank_info">Kelola Bank Transfer usaha Anda!</string>
    <string name="lbl_etalase_kelolatoko_title">Kelola Toko Online</string>
    <string name="lbl_etalase_kelolatoko_info">Kelola Toko Online Anda!</string>
    <string name="lbl_etalase_linktoko_title">Info Toko Online</string>
    <string name="lbl_etalase_linktoko_info">Sebar dan bagikan Link Toko Anda!</string>
    <string name="lbl_title_report">Cek stok barang, transaksi,laba rugi, dan mutasi\nToko Anda</string>
    <string name="lbl_report_produk_title">Stok Barang</string>
    <string name="lbl_report_produk_info">Cek stok barang Anda!</string>
    <string name="lbl_report_kulakan_title">Histori Kulakan</string>
    <string name="lbl_report_kulakan_info">Cek histori kulakan Anda!</string>
    <string name="lbl_report_transaksi_title">Produk / Layanan</string>
    <string name="lbl_report_transaksi_info">Cek laporan produk/layanan Anda!</string>
    <string name="lbl_report_profit_title">Keuangan</string>
    <string name="lbl_report_profit_info">Cek laporan keuangan toko Anda!</string>
    <string name="lbl_report_mutasi_title">Mutasi Kas</string>
    <string name="lbl_report_mutasi_info">Cek mutasi kas toko Anda!</string>
    <string name="lbl_report_payslip_title">Gaji Karyawan</string>
    <string name="lbl_report_payslip_info">Cek laporan gaji karyawan toko Anda!</string>
    <string name="lbl_report_absensi_title">Absensi Karyawan</string>
    <string name="lbl_report_absensi_info">Cek laporan absensi karyawan toko Anda!</string>
    <string name="lbl_report_grosir_title">Grosir Online</string>
    <string name="lbl_report_grosir_info">Cek laporan grosir online Anda!</string>
    <string name="lbl_report_branch_title">Penjualan</string>
    <string name="lbl_report_branch_info">Cek semua penjualan toko Anda!</string>
    <string name="lbl_input_name_title">Nama produk</string>
    <string name="lbl_input_name_info">Masukkan nama produk. Contoh: Minyak goreng</string>
    <string name="lbl_input_category_title">Kategori</string>
    <string name="lbl_input_category_info">Pilih kategori</string>
    <string name="lbl_input_price_stock_title">Harga &amp; Stok</string>
    <string name="lbl_input_price_sell_title">Harga Jual (Rp)</string>
    <string name="lbl_input_price_buy_title">Harga Beli (Rp)</string>
    <string name="lbl_input_stock_title">Stok</string>
    <string name="lbl_input_first_stock_title">Stok Awal</string>
    <string name="lbl_input_minstock_title">Minimum Stok</string>
    <string name="lbl_input_desc_title">Keterangan</string>
    <string name="lbl_input_discount_title">Diskon</string>
    <string name="lbl_input_barcode_title">Barcode</string>
    <string name="lbl_input_barcode_info">Masukkan barcode</string>
    <string name="lbl_piutang_sum">Jumlah Piutang</string>
    <string name="lbl_hutang_sum">Jumlah Hutang</string>
    <string name="lbl_hutang_supplier">Ke Supplier</string>
    <string name="lbl_piutang_customer">Pelanggan</string>
    <string name="lbl_hutang_rp">($)</string>
    <string name="lbl_hutang">Hutang</string>
    <string name="lbl_piutang">Piutang</string>
    <string name="lbl_transaksi">Transaksi</string>
    <string name="lbl_hutang_belum_lunas">Belum Lunas</string>
    <string name="lbl_hutang_jatuh_tempo">Jatuh Tempo</string>
    <string name="lbl_hutang_terakhir">Hutang Terakhir</string>
    <string name="lbl_piutang_terakhir">Piutang Terakhir</string>
    <string name="lbl_tagihan">Jumlah Tagihan</string>
    <string name="lbl_jumlah_yang_dibayarkan">Jumlah yang sudah dibayarkan</string>
    <string name="lbl_total_yang_dibayarkan">Total yang sudah dibayarkan</string>
    <string name="lbl_hutang_nominal">Nominal</string>
    <string name="lbl_name">Nama</string>
    <string name="lbl_store_name">Nama Toko</string>
    <string name="lbl_name_hint">Masukkan Nama Lengkap Anda</string>
    <string name="lbl_phone">No. Handphone</string>
    <string name="lbl_phone_hint">Masukkan No. Handphone Anda</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_email_hint">Masukkan Email Anda</string>
    <string name="lbl_address">Alamat</string>
    <string name="lbl_address_hint">Masukkan Alamat Anda</string>
    <string name="lbl_province">Provinsi</string>
    <string name="lbl_province_hint">Provinsi Anda</string>
    <string name="lbl_city">Kota</string>
    <string name="lbl_city_hint">Kota Anda</string>
    <string name="lbl_phone_login">No. Handphone Anda</string>
    <string name="lbl_password_login">Password Anda</string>
    <string name="lbl_omset">Omset Toko Anda</string>
    <string name="lbl_phone_2">No. HP</string>
    <string name="lbl_rp_0">Rp 0</string>
    <string name="lbl_search_product">Cari Produk</string>
    <string name="lbl_search_category">Cari Kategori</string>
    <string name="lbl_search_discount">Cari Diskon</string>
    <string name="lbl_search_customer">Cari Pelanggan</string>
    <string name="lbl_search_supplier">Cari Supplier</string>
    <string name="lbl_search_staff">Cari Karyawan</string>
    <string name="lbl_search_customer_piutang">Cari Pelanggan Piutang</string>
    <string name="lbl_search_transaction">Cari Transaksi</string>
    <string name="lbl_search_invoice">Masukkkan nomor invoice</string>
    <string name="lbl_search_product_transaction">Cari transaksi</string>
    <string name="lbl_category_title">Kategori Produk</string>
    <string name="lbl_category_hint">Nama Kategori Produk</string>
    <string name="lbl_name_supplier">Nama Supplier</string>
    <string name="lbl_name_supplier_hint">Masukkan Nama Lengkap Supplier Anda</string>
    <string name="lbl_phone_supplier_hint">Masukkan No. Handphone Supplier Anda</string>
    <string name="lbl_email_supplier_hint">Masukkan Email Supplier Anda</string>
    <string name="lbl_address_supplier_hint">Masukkan Alamat Supplier Anda</string>
    <string name="lbl_setting_account_title">Akun</string>
    <string name="lbl_setting_account_info">Data Diri, Alamat dan Keamanan Akun</string>
    <string name="lbl_setting_store_title">Toko</string>
    <string name="lbl_setting_store_info">Profile Toko, Lokasi Toko dan Telepon Toko</string>
    <string name="lbl_setting_printer_title">Printer</string>
    <string name="lbl_setting_printer_info">Pengaturan Printer</string>
    <string name="lbl_detail_id">ID Transaksi:</string>
    <string name="lbl_detail_bayar">Bayar</string>
    <string name="btn_share_social">Bagikan</string>
    <string name="btn_copy">Salin</string>
    <string name="have_stock">Mempunyai Stok?</string>
    <string name="daily">Harian</string>
    <string name="weekly">Mingguan</string>
    <string name="monthly">Bulanan</string>
    <string name="filter_by">Filter by</string>
    <string name="lbl_sharing">Share and get  commission</string>
    <string name="lbl_info_share">Invite your friends to join and Upgrade \n and get the commission</string>
    <string name="lbl_share">Share Your Affiliate Code</string>
    <string name="lbl_info_commision">*Upgrade fee commission is given after your invited friend upgrades to premium.</string>
    <string name="lbl_input_menu_name_title">Nama Product</string>
    <string name="lbl_order">Order now</string>
    <string name="lbl_insert_pin">Insert Your PIN</string>
    <string name="lbl_nama_pelanggan">Nama Pelanggan</string>
    <string name="lbl_nomor_pelanggan">Nomor Pelanggan</string>
    <string name="lbl_nama_produk">Nama Produk</string>
    <string name="lbl_harga">Tagihan</string>
</resources>