<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/standard_margin_2x"
    android:id="@+id/ll_wrapper"
    android:background="@drawable/selector_white">

    <LinearLayout
        android:paddingRight="@dimen/standard_margin_2x"
        android:paddingLeft="@dimen/standard_margin_2x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginLeft="@dimen/standard_margin_2x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_nama_produk"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_sku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/primaryText"
                android:textStyle="bold"/>

            <View
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_nama_pelanggan"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/primaryText"
                android:textStyle="bold"/>

            <View
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_nomor_pelanggan"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_customerno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/primaryText"
                android:textStyle="bold"/>

            <View
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_detail_id"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_reff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/primaryText"
                android:textStyle="bold"/>

            <View
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_harga"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_tagihan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/primaryText"
                android:textStyle="bold"/>

            <View
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/lbl_detail_bayar"
                android:textSize="@dimen/subtitle"
                android:textColor="@color/primaryText"/>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nama_pelanggan"
                android:gravity="start"
                android:textSize="@dimen/title"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/et_hargajual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/lbl_input_price_sell_title"
                android:background="@drawable/rounded_white_4dp_stroke_gray"
                android:inputType="number"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/subtitle"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lbl_insert_pin"
                    android:background="@drawable/rounded_white_4dp_stroke_gray"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:textColor="@color/vermillion"
                    android:textSize="@dimen/subtitle"
                    android:textStyle="bold"
                    tools:ignore="TextFields" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/lbl_order"
                    android:background="@drawable/gradient_blue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_marginTop="@dimen/standard_margin_2x"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_light"/>

</LinearLayout>