<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fl_parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/charcoal_grey_two_opa_64"
>

    <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_rounded_top_16dp_white"
            android:orientation="vertical"
            android:padding="@dimen/standard_margin_2x">

        <View
                android:layout_width="56dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_home_more_menu"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryText"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by"
            />

            <ImageView
                    android:id="@+id/btn_close"
                    app:srcCompat="@drawable/ic_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="@dimen/standard_margin_2x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:id="@+id/btn_daily"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subheading"
                    android:text="@string/daily"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_accent_4dp"
                    />
            <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginLeft="@dimen/standard_margin_2x"
                    android:layout_gravity="center"
                    android:id="@+id/btn_weekly"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/subheading"
                    android:text="@string/weekly"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_accent_outline_4dp"
                    />
            <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginLeft="@dimen/standard_margin_2x"
                    android:layout_gravity="center"
                    android:id="@+id/btn_monthly"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/subheading"
                    android:text="@string/monthly"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_accent_outline_4dp"
                    />

        </LinearLayout>
        <FrameLayout
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="440dp"/>
    </LinearLayout>

</FrameLayout>